# ibmb

./: pyproject.toml  spec-file-with-ibmb.txt
dataloaders/: IBMBBatchLoader.py  utils.py
ibmb/: infer.py  run_ogbn.py
ibmb/configs/main_exps/gat/arxiv/: clustergcn.yaml
ibmb/configs/main_exps/sage/arxiv/: clustergcn.yaml
ibmb/data/: modified_tsp.py
ibmb/dataloaders/: BaseLoader.py  ClusterGCNLoader.py  GraphSAINTRWSampler.py  IBMBBatchLoader.py  IBMBNodeLoader.py  IBMBRandLoader.py  IBMBRandfixLoader.py  LADIESSampler.py  NeighborSamplingLoader.py  ShaDowLoader.py  get_loaders.py
ibmb/train/: trainer.py
