[tool.poetry]
name = "ibmb"
version = "0.1.0"
description = ""
authors = ["Johannes Gasteigeri <j.gasteiger@in.tum.de>", "Chendi Qian <chendi.qian@log.rwth-aachen.de>"]
readme = "readme.md"
packages = [{ include = "ibmb" }, {include = "ibmb/**/*.py"}]

[tool.poetry.dependencies]
python = "3.11.*"
blessed = "1.20.0"
certifi = "2024.2.2"
charset-normalizer = "3.3.2"
contourpy = "1.1.1"
cycler = "0.12.1"
decorator = "4.4.2"
filelock = "3.13.1"
fonttools = "4.50.0"
fsspec = "2024.2.0"
googledrivedownloader = "0.4"
gpustat = "1.1.1"
idna = "3.6"
importlib-resources = "6.3.1"
isodate = "0.6.1"
jinja2 = "3.1.3"
joblib = "1.3.2"
kiwisolver = "1.4.5"
littleutils = "0.2.2"
markupsafe = "2.1.5"
matplotlib = "3.7.5"
mpmath = "1.3.0"
ninja = "1.11.1.1"
numpy = "^1.22.4"
ogb = "1.3.6"
outdated = "0.2.2"
packaging = "24.0"
#pandas = "1.3.5"
pillow = "10.2.0"
psutil = "5.9.8"
pyparsing = "3.1.2"
python-dateutil = "2.9.0.post0"
python-louvain = "0.16"
pytz = "2024.1"
pyyaml = "6.0.1"
rdflib = "7.0.0"
requests = "2.31.0"
#scikit-learn = "1.1.3"
six = "1.16.0"
#sympy = "1.12"
threadpoolctl = "3.3.0"
tqdm = "4.66.2"
#typing-extensions = "4.10.0"
tzdata = "2024.1"
urllib3 = "2.2.1"
wcwidth = "0.2.13"
yacs = "0.1.8"
zipp = "3.18.1"
# 20240925: poetry2nix doesn't work for higher versions of torch (https://github.com/nix-community/poetry2nix/issues/1311)
torch = "2.2.2"
#torch="2.3.1"
# torch-scatter = {url = "https://data.pyg.org/whl/torch-1.8.0%2Bcpu/torch_scatter-2.0.8-cp39-cp39-macosx_10_14_x86_64.whl"}
#torch-scatter = { version = "2.0.8", source = "pyg-wheels" }
setuptools = "69.5.1"
torch-scatter = "2.1.2"
torch-sparse = "0.6.18"
torch-geometric = "^2.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
